welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:8: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (vacation==false && weekday==false){
               ^