welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	var vacation=false
	var weekday=false
	if (vacation==true) {
		return vacation
	} else if (vacation==false && weekday==true) {
		return false
	} else if (vacation==false && weekday==false){
		return weekday
	}
	
}
